recursive macros and easy steps towards undefs

--- a/TODO
+++ b/TODO
@@ -1,1 +1,8 @@
-Execute inside of a main function?
+mandatory default case in match statements
+lazy function loading?
+-- active global ints instead of global ptrs
+undef macros
+
+LINKING:
+    termios
+    
